# crn-automation

./: CMakeLists.txt  Makefile  README.md
include/: hello.h
sandbox/: CMakeLists.txt
src/: hello.cpp
tests/: CMakeLists.txt  test.cpp
